# Operation-Kit

./: README.md
Operation-Kit-Go/: go.mod  go.sum  main.go
Operation-Kit-Rust/: index.html  package-lock.json  package.json  readme.txt  vite.config.ts
Operation-Kit-Rust/.github/workflows/: release.yml
Operation-Kit-Rust/src/: App.vue  main.ts  style.css
Operation-Kit-Rust/src-tauri/: Cargo.toml  tauri.conf.json
Operation-Kit-Rust/src-tauri/icons/: icon.icns
Operation-Kit-Rust/src-tauri/src/: commands.rs  crypto.rs  error.rs  main.rs  oss.rs  text_processor.rs
Operation-Kit-Rust/src/types/: index.ts
Operation-Kit-Rust/src/utils/: api.ts  text.ts
