[package]
name = "baibaoxiang-rust"
version = "0.1.0"
description = "运营百宝箱"
authors = ["July_Tea"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "clipboard-all", "window-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
hashids = { git = "https://github.com/charsyam/hashids_rust" }
base64 = "0.21"
rand = "0.8"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 'z'     # 优化大小
lto = true         # 链接时优化
codegen-units = 1  # 降低并行性以提高优化
strip = true       # 移除debug信息
