[package]
name = "baibaoxiang-rust"
version = "0.2.0"
description = "运营百宝箱"
authors = ["July_Tea"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "clipboard-all", "window-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
base64 = "0.21"
rand = "0.8"
harsh = "0.2.2"
hmac = "0.12.1"
sha1 = "0.10.6"
hex = "0.4.3"
reqwest = { version = "0.12.15", features = ["json"] }
md5 = "0.7.0"
chrono = "0.4.40"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 'z'     # 优化大小
lto = true         # 链接时优化
codegen-units = 1  # 降低并行性以提高优化
strip = true       # 移除debug信息
